# Hackathon_paris_saclay_2026

./: README.md  decouper_eeg.py  evaluer_modele.py  historique_crises.csv  historique_crises_dense.csv  lauch_serveur.py  model_eeg.pkl  pyproject.toml  scenario_demo.py  serveur_flask.py  test_algo.py
dataset_LIVE/: live_000_CALME.npy  live_001_CALME.npy  live_002_CALME.npy  live_003_CALME.npy  live_004_CALME.npy  live_005_CALME.npy  live_006_CRISE.npy  live_007_CRISE.npy  live_008_CRISE.npy  live_009_CRISE.npy  live_010_CRISE.npy  live_011_CRISE.npy  live_012_CRISE.npy  live_013_CRISE.npy  live_014_CRISE.npy  live_015_CRISE.npy  live_016_CRISE.npy  live_017_CRISE.npy  live_018_CRISE.npy  live_019_CRISE.npy  live_020_CRISE.npy  live_021_CRISE.npy  live_022_CRISE.npy  live_023_CRISE.npy  live_024_CRISE.npy  live_025_CALME.npy  live_026_CALME.npy  live_027_CALME.npy  live_028_CALME.npy  live_029_CALME.npy  live_030_CALME.npy  live_031_CALME.npy  live_032_CALME.npy  live_033_CALME.npy  live_034_CALME.npy  live_035_CALME.npy  live_036_CRISE.npy  live_037_CRISE.npy  live_038_CRISE.npy  live_039_CRISE.npy  (+81 more)
dataset_TRAIN/calme/: chb01_04_0.npy  chb01_04_1.npy  chb01_04_2.npy  chb01_04_3.npy  chb01_04_4.npy  chb01_04_5.npy  chb01_04_6.npy  chb01_04_7.npy  chb01_04_8.npy  chb01_04_9.npy  chb01_15_0.npy  chb01_15_1.npy  chb01_15_10.npy  chb01_15_11.npy  chb01_15_12.npy  chb01_15_13.npy  (+104 more)
questionnaires_data/: q_20251201_095419.json  q_20260101_095419.json  q_20260201_095419.json
templates/: Login.html  dash_admin.html  dash_doc.html  dash_parent.html  dashboard.html
(+60 files in other folders)
