[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "joblib>=1.5.3",
    "mne>=1.11.0",
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
